--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
   </head>
   <body>
     <div id="app"></div>
-    <script src="/assets/js/main.js"></script>
   </body>
 </html>
